# marie1st

./: .gitignore  .replit  Dockerfile  app.py  config.py  main.py  pyproject.toml  replit.nix  requirements.txt  scheduler.py  scraper.py  stock_data.py  telegram_sender.py  test_all_images.py  test_brku.py  test_chart_telegram.py  test_image_telegram.py  test_ivz.py  test_links.py  test_run.py  test_telegram.py  test_ticker.py
