[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.14",
    "beautifulsoup4>=4.13.3",
    "chromedriver-py>=134.0.6998.165",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.0",
    "schedule>=1.2.2",
    "selenium>=4.30.0",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.55",
]
